--- a/examples/template/template.yaml
+++ b/examples/template/template.yaml
@@ -8,21 +8,53 @@ metadata:
 spec:
   owner: user:guest
   type: service
-
-  # These parameters are used to generate the input form in the frontend, and are
-  # used to gather input data for the execution of the template.
   parameters:
     - title: Fill in some steps
       required:
         - name
+        - creatorName
+        - crewName
+        - applicationName
+        - applicationLetter
+        - squad
+        - creationDate
+        - repositoryName
       properties:
         name:
           title: Name
           type: string
           description: Unique name of the component
           ui:autofocus: true
-          ui:options:
-            rows: 5
+        creatorName:
+          title: Creator Name
+          type: string
+          description: Name of the creator of the component
+        crewName:
+          title: Crew Name
+          type: string
+          description: Name of the crew associated with this component
+        applicationName:
+          title: Name of the application of the component
+          type: string
+          description: Application letter identifier
+        applicationLetter:
+          title: Application Letter
+          type: string
+          description: Application letter identifier
+        squad:
+          title: Squad
+          type: string
+          description: Squad associated with this component
+        creationDate:
+          title: Creation Date
+          type: string
+          format: date
+          description: Creation date of the component
+        repositoryName:
+          title: Repository Name
+          type: string
+          description: Name of the repository
+
     - title: Choose a location
       required:
         - repoUrl
@@ -34,11 +66,7 @@ spec:
           ui:options:
             allowedHosts:
               - github.com
-
-  # These steps are executed in the scaffolder backend, using data that we gathered
-  # via the parameters above.
   steps:
-    # Each step executes an action, in this case one templates files into the working directory.
     - id: fetch-base
       name: Fetch Base
       action: fetch:template
@@ -47,7 +75,6 @@ spec:
         values:
           name: ${{ parameters.name }}
 
-    # This step publishes the contents of the working directory to GitHub.
     - id: publish
       name: Publish
       action: publish:github
@@ -56,7 +83,6 @@ spec:
         description: This is ${{ parameters.name }}
         repoUrl: ${{ parameters.repoUrl }}
 
-    # The final step is to register our new component in the catalog.
     - id: register
       name: Register
       action: catalog:register
@@ -64,7 +90,6 @@ spec:
         repoContentsUrl: ${{ steps['publish'].output.repoContentsUrl }}
         catalogInfoPath: '/catalog-info.yaml'
 
-  # Outputs are displayed to the user after a successful execution of the template.
   output:
     links:
       - title: Repository
