--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -45,7 +45,8 @@
     "react-dom": "^18.0.2",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
-    "react-use": "^17.2.4"
+    "react-use": "^17.2.4",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@backstage/test-utils": "^1.6.0",
