--- a/package.json
+++ b/package.json
@@ -53,5 +53,8 @@
       "prettier --write"
     ]
   },
-  "packageManager": "yarn@4.4.1"
+  "packageManager": "yarn@4.4.1",
+  "dependencies": {
+    "react-toastify": "^10.0.6"
+  }
 }
