--- a/package.json
+++ b/package.json
@@ -53,8 +53,5 @@
       "prettier --write"
     ]
   },
-  "packageManager": "yarn@4.4.1",
-  "dependencies": {
-    "react-toastify": "^10.0.6"
-  }
+  "packageManager": "yarn@4.4.1"
 }
