--- a/catalog-info.yaml
+++ b/catalog-info.yaml
@@ -1,11 +1,11 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: ibk-app
+  name: backstage-app
   description: An example of a Backstage application.
   # Example for optional annotations
-  # annotations:
-  #   github.com/project-slug: backstage/backstage
+  annotations:
+    github.com/project-slug: backstage/backstage-app
   #   backstage.io/techdocs-ref: dir:.
 spec:
   type: website
