--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -18,6 +18,8 @@
   "dependencies": {
     "@backstage/backend-defaults": "^0.5.0",
     "@backstage/backend-plugin-api": "^1.0.2",
+    "@backstage/catalog-client": "^1.8.0",
+    "@backstage/catalog-model": "^1.7.1",
     "@backstage/config": "^1.2.0",
     "@backstage/plugin-app-backend": "^0.3.74",
     "@backstage/plugin-auth-backend": "^0.24.0",
